🔧 Create universal wheeel; mark zip_safe=False

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[bdist_wheel]
+universal = True
+
 [metadata]
 name = pre-commit-indents-to-tabs
 version = attr: indents_to_tabs.__version__
@@ -9,6 +12,7 @@ packages=find:
 python_requires = >= 3.7
 tests_require =
     pytest >= 7.0.1
+zip_safe = False
 
 [options.packages.find]
 where=src
