--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 minversion = 7.0
-addopts = --capture=no --doctest-modules --verbose --verbose
+addopts = -vv --capture=no --doctest-modules --cov
