🚀 Define pre-commit hook

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,5 +14,9 @@ tests_require =
     pytest >= 7.0.1
 zip_safe = False
 
+[options.entry_points]
+console_scripts =
+    indents-to-tabs = indents_to_tabs:main
+
 [options.packages.find]
 where=src
