--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,14 @@ version = attr: indents_to_tabs.__version__
 package_dir=
     =src
 packages=find:
-python_requires = >= 3.7
+python_requires = >=3.7
+setup_requires =
+    setuptools >= 46.4.0  # required to use attr to extract version
 tests_require =
+    coverage >= 6.3
+    mypy >= 0.931
     pytest >= 7.0.1
+    pytest-cov >= 3.0.0
 zip_safe = False
 
 [options.entry_points]
@@ -20,3 +25,6 @@ console_scripts =
 
 [options.packages.find]
 where=src
+
+[options.package_data]
+indents_to_tabs = py.typed
