🚀 Add PyPI classifiers and information

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,23 @@ universal = True
 [metadata]
 name = pre-commit-indents-to-tabs
 version = attr: indents_to_tabs.__version__
+description = Pre-commit hook to replace spaces with tabs in indents.
+author = Andrew Pinkham
+license = BSD 2-Clause License
+license_file = LICENSE
+url = https://github.com/jambonrose/pre-commit-indents-to-tabs
+project_urls =
+    Bug Tracker = https://github.com/jambonrose/pre-commit-indents-to-tabs/discussions
+classifiers =
+    License :: OSI Approved :: BSD License
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
 
 [options]
 package_dir=
@@ -17,6 +34,7 @@ tests_require =
     mypy >= 0.931
     pytest >= 7.0.1
     pytest-cov >= 3.0.0
+test_suite = tests
 zip_safe = False
 
 [options.entry_points]
